--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.5",
     "echarts": "^4.6.0",
     "element-ui": "^2.4.5",
+    "es6-promise": "^4.2.8",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
     "vue": "^2.6.12",
